# SFML-Platformer-Demo

./: CMakeLists.txt  Coin.h  Main.cpp  Player.hpp  README.md
.github/workflows/: c-cpp.yml
src/: Entity.hpp  Wall.hpp
src/include/headerfiles/: Animation.cpp  Animation.h
